--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=PetLovers
+APP_NAME=TODO Mudar Nome do Projeto
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.webfaction.com
+MAIL_HOST=
 MAIL_PORT=587
-MAIL_USERNAME=desenvolvimento
-MAIL_PASSWORD=@plicativos12
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=contato@dev.com.br
-MAIL_FROM_NAME="Contato Dev"
+MAIL_FROM_ADDRESS=TODO Mudar from address para o do seu projeto
+MAIL_FROM_NAME=TODO mudar from name para o do seu projeto
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
