--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
-APP_NAME=PetLovers
+APP_NAME=TODO Mudar Nome do Projeto
 APP_ENV=local
-APP_KEY=base64:sISCYlDIb9RwsbmN0rsnEIlyUG2zduARILZjpwtGFAc=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
@@ -19,13 +19,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.webfaction.com
+MAIL_HOST=
 MAIL_PORT=587
-MAIL_USERNAME=desenvolvimento
-MAIL_PASSWORD=@plicativos12
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=contato@teste.com.br
-MAIL_FROM_NAME="Contato Teste"
+MAIL_FROM_ADDRESS=TODO Mudar from address para o do seu projeto
+MAIL_FROM_NAME=TODO mudar from name para o do seu projeto
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -35,7 +35,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-JWT_SECRET=3wvfOjjh7la9nAfPGZO9l2I2t9pHcE6a
+JWT_SECRET=
 JWT_TTL=21600
 JWT_REFRESH_TTL=21600000
 JWT_BLACKLIST_GRACE_PERIOD=30
