--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,22 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "barryvdh/laravel-cors": "^0.11.0",
         "brozot/laravel-fcm": "^1.2",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
         "fzaninotto/faker": "^1.7",
         "intervention/image": "^2.4",
+        "jcf/geocode": "^1.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
         "laravellegends/pt-br-validator": "5.1.*",
         "malhal/laravel-geographical": "^1.0",
         "moip/moip-sdk-php": "^3.0",
+        "rap2hpoutre/laravel-log-viewer": "^0.11.0",
         "tymon/jwt-auth": "dev-develop",
-        "yajra/laravel-datatables-oracle": "^8.3",
-        "rap2hpoutre/laravel-log-viewer": "^0.11.0"
+        "yajra/laravel-datatables-oracle": "^8.3"
     },
     "require-dev": {
         "reliese/laravel": "^0.0.13",
