--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=TODO Mudar Nome do Projeto
 APP_ENV=local
-APP_KEY=
+APP_KEY=TODO Rodar php artisan key:generate
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
@@ -40,7 +40,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-JWT_SECRET=
+JWT_SECRET=TODO Rodar php artisan jwt:secret
 JWT_TTL=21600
 JWT_REFRESH_TTL=21600000
 JWT_BLACKLIST_GRACE_PERIOD=30
