change to entities to models

--- a/Templates PHP Storm/Rules
+++ b/Templates PHP Storm/Rules
@@ -7,7 +7,7 @@
 
 namespace App\Validators;
 
-use App\Entities$CONTRA_BARRA${MODEL};
+use App\Models$CONTRA_BARRA${MODEL};
 use Illuminate\Validation\Rule;
 
 
